@@ -46,12 +46,12 @@ jobs:
           image: symless/synergy-core:fedora30
           packager: rpm
           name: fedora30
-        # centos7.6:
-        #   image: symless/synergy-core:centos7.6
-        #   packager: rpm
-        #   name: centos76
+        centos7.6:
+          image: symless/synergy-core:centos7.6
+          packager: rpm
+          name: centos76
         centos8:
-          image: sgad/synergy-core:centos8
+          image: symless/synergy-core:centos8
           packager: rpm
           name: centos8
 
